# harmony

./: Cargo.toml
crates/harmony_core/: Cargo.toml
crates/harmony_core/examples/: peer_1.rs  peer_2.rs
crates/harmony_core/src/: builder.rs  dispatcher.rs  handler.rs  lib.rs  protocol_collection.rs  protocol_handler.rs  receive.rs  send.rs  tuple_utils.rs
crates/harmony_core/src/broker/: builder.rs  mod.rs
crates/harmony_core/src/connection/: receive.rs  send.rs
crates/harmony_core/src/database/: mod.rs  table_collection.rs  transaction.rs
crates/harmony_core/src/protocol/: mod.rs  packet.rs  protocol_collection.rs
crates/harmony_core/src/service/: mod.rs  recieve.rs  send.rs
crates/harmony_discovery/: Cargo.toml
crates/harmony_discovery/src/: lib.rs
crates/harmony_message/: Cargo.toml
crates/harmony_message/src/: lib.rs
crates/harmony_persistance/: Cargo.toml
crates/harmony_persistance/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/examples/: message_service_peer_1.rs  message_service_peer_2.rs  peer_1.rs  peer_2.rs
crates/protocol/src/: lib.rs
crates/protocol/src/audio/: mod.rs
crates/protocol/src/audio/audio_v1/: audio_packet.rs  mod.rs
crates/protocol/src/discovery/: mod.rs
crates/protocol/src/discovery/discovery_v1/: ping.rs
crates/protocol/src/error/: mod.rs
crates/protocol/src/file/: mod.rs
crates/protocol/src/message/: mod.rs
crates/protocol/src/message/message_v1/: message.rs  mod.rs  retransmit.rs  service.rs
crates/protocol/src/video/: mod.rs
crates/protocol/src/video/video_v1/: mod.rs  video_packet.rs  video_start.rs
examples/: chat.rs  chat_1.rs  chat_2.rs
