[package]
name = "harmony_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = { version = "0.3.31", features = ["sink"] }
iroh = { version = "0.34.1", features = ["discovery-local-network"] }
postcard = { version = "1.1.1", features = ["use-std"] }
redb = "2.6.0"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
ed25519-dalek = "2.1.1"
directories = "6.0.0"
