[package]
name = "harmony_core"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh.workspace = true
postcard.workspace = true
redb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
ed25519-dalek.workspace = true

#needed due to iroh errors
anyhow = "1.0.98"

#needed for finding where the db should be stored
directories = "6.0.0"
futures-util = "0.3.31"
