[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
harmony_core = { path = "../harmony_core" }
blake3 = { version = "1.8.2", features = ["serde"] }
postcard.workspace = true
ed25519-dalek = "2.1.1"
iroh.workspace = true
redb = "2.6.0"
thiserror = "2.0.12"
tokio.workspace = true
