[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
harmony_core = { path = "../harmony_core" }

serde.workspace = true
postcard.workspace = true
ed25519-dalek.workspace = true
iroh.workspace = true
redb.workspace = true
thiserror.workspace = true
tokio.workspace = true

#needed for the message hashing protocol
blake3 = { version = "1.8.2", features = ["serde"] }
